# cpp_projects

./: .gitignore  readMe.txt
Bassa/: Bassa.sln  Bassa.vcxproj  kernel.cu
CMakeProject1/: CMakeLists.txt  main.cu
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj
ConsoleApplication2/: ConsoleApplication2.cpp  ConsoleApplication2.sln  ConsoleApplication2.vcxproj  ConsoleApplication2.vcxproj.filters
ConsoleApplication3/: ConsoleApplication3.cpp  ConsoleApplication3.sln  ConsoleApplication3.vcxproj
Copy (1) fdmt_pravir_v0/: fdmt_base.hpp  fdmt_cpu.cpp  fdmt_cpu.hpp  fdmt_gpu.cu  fdmt_gpu.cuh  fdmt_utils.cpp  kernel.cu
CudaFftSamples/: CudaFftSamples.sln  CudaFftSamples.vcxproj  kernel.cu
CudaRuntime1/: CudaRuntime1.sln  CudaRuntime1.vcxproj  kernel.cu
CudaRuntime2/: CudaRuntime2.sln  CudaRuntime2.vcxproj  kernel.cu
CudaRuntime3/: CudaRuntime3.sln  CudaRuntime3.vcxproj
CudaRuntime4/: CudaRuntime4.sln  CudaRuntime4.vcxproj
CudaRuntime5/: CudaRuntime5.sln  CudaRuntime5.vcxproj
MeanAndVar/: MeanAndVar.sln  MeanAndVar.vcxproj  kernel.cu
MyVSLib_C++/: Block.cu  Block.cuh  Block_m.cuh  Block_m_v1.cu  CFdmtC.cpp  CFdmtC.h  CFdmtG.cu  CFdmtG.cuh  Chunk.cu  Chunk.cuh  Cleaning.cu  Cleaning.cuh  Constants.h  Copy (1) Block_m.cu  Detection.cu  Detection.cuh  DrawImg.cpp  DrawImg.h  FdmtCpuF_omp .cpp  FdmtCpuF_omp.h  FdmtCpuFuncs.cpp  FdmtCpuFuncs.h  FdmtCpuT_omp.cpp  FdmtCpuT_omp.h  FdmtCpu_omp.cpp  FdmtCu0.cu  FdmtCu0.cuh  FdmtCu1.cuh  FdmtCu2.cu  FdmtCu2.cuh  FdmtCuKeith.cu  FdmtCuKeith.cuh  FdmtU.cu  FdmtU.cuh  (+42 more)
(+235 files in other folders)
